--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery">
+        <activity android:name=".VideoViewActivity"></activity>
+        <activity android:name=".FavoriteViewActivity"></activity>
+        <activity android:name=".SecurityViewActivity"></activity>
+        <activity android:name=".LocationViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
