--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gallery">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Gallery">
-        <activity android:name=".LoggedSecurityViewActivity"></activity>
+        android:theme="@style/Theme.Gallery"
+        android:noHistory = "true">
+        <activity android:name=".FullScreenActivity"></activity>
+        <activity android:name=".LoggedSecurityViewActivity" />
         <activity android:name=".VideoViewActivity" />
         <activity android:name=".FavoriteViewActivity" />
         <activity android:name=".SecurityViewActivity" />
