--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -8,12 +8,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:noHistory="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Gallery"
-        android:noHistory = "true">
-        <activity android:name=".FullScreenActivity"></activity>
+        android:theme="@style/Theme.Gallery">
+        <activity android:name=".VideoPlayActivity"></activity>
+        <activity android:name=".FullScreenActivity" />
         <activity android:name=".LoggedSecurityViewActivity" />
         <activity android:name=".VideoViewActivity" />
         <activity android:name=".FavoriteViewActivity" />
