--- a/Gallery/app/build.gradle
+++ b/Gallery/app/build.gradle
@@ -37,4 +37,14 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Scalable Size Unit
+    implementation "com.intuit.sdp:sdp-android:1.0.6"
+    implementation "com.intuit.ssp:ssp-android:1.0.6"
+
+    //Material Design
+    implementation "com.google.android.material:material:1.3.0"
+
+    // Rounded ImageView
+    implementation "com.makeramen:roundedimageview:2.3.0"
 }
