Update all section's layout

--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -13,19 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery">
-        <activity android:name=".VideoPlayActivity"></activity>
-        <activity android:name=".FullScreenActivity" />
-        <activity android:name=".LoggedSecurityViewActivity" />
-        <activity android:name=".VideoViewActivity"
-            android:parentActivityName=".MainActivity">
-
-            <meta-data
-                android:value="android.support.PARENT_ACTIVITY"
-                android:name="com.example.gallery.MainActivity"/>
-        </activity>
-        <activity android:name=".FavoriteViewActivity" />
-        <activity android:name=".SecurityViewActivity" />
-        <activity android:name=".LocationViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".VideoPlayActivity"></activity>
+        <activity android:name=".FullScreenActivity" />
+        <activity android:name=".LoggedSecurityViewActivity" />
+        <activity android:name=".VideoViewActivity">
+        </activity>
+        <activity android:name=".FavoriteViewActivity" />
+        <activity android:name=".SecurityViewActivity" />
+        <activity android:name=".LocationViewActivity" />
+
     </application>
 
 </manifest>
