+Add View images by date function
-2 java files (listOfDate, listOfImage) return list of date of images and the list of path to those images which had that date
-Add this function to menu in Toolbar
-Remaining files are support this function

--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -5,17 +5,20 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Gallery"
         android:noHistory="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery">
         <activity android:name=".DetailsScreen"></activity>
+        <activity android:name=".ByDateActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
