Add "Change Theme" feature
Change and manage theme, get current theme with shared preferences (not yet adjust the color)

--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.Gallery">
         <activity android:name=".DetailsScreen"></activity>
         <activity android:name=".ByDateActivity"></activity>
+        <activity android:name=".Settings"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
