--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery">
+        <activity android:name=".VideoByDateActivity"></activity>
         <activity android:name=".DetailsScreen"></activity>
         <activity android:name=".VideoDetailsScreen"/>
         <activity android:name=".ByDateActivity"></activity>
