+Adjust face detector

--- a/Gallery/app/build.gradle
+++ b/Gallery/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
 
     // Rounded ImageView
     implementation "com.makeramen:roundedimageview:2.3.0"
-    implementation "com.google.android.gms:play-services-vision:9.8.0"
+    implementation 'com.google.android.gms:play-services-vision:16.2.0'
+    //implementation 'com.burhanrashid52:photoeditor:1.1.2'
 }
