--- a/Gallery/app/build.gradle
+++ b/Gallery/app/build.gradle
@@ -8,12 +8,15 @@ android {
 
     defaultConfig {
         applicationId "com.example.gallery"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 23
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -34,6 +37,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -47,6 +53,7 @@ dependencies {
 
     // Rounded ImageView
     implementation "com.makeramen:roundedimageview:2.3.0"
-    implementation 'com.google.android.gms:play-services-vision:16.2.0'
-    //implementation 'com.burhanrashid52:photoeditor:1.1.2'
+    implementation "com.google.android.gms:play-services-vision:9.8.0"
+
+    implementation(name:'ds-photo-editor-sdk', ext:'aar')
 }
