--- a/Gallery/build.gradle
+++ b/Gallery/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -15,7 +16,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
+        flatDir {dirs 'libs'}
     }
 }
 
