--- a/Gallery/app/src/main/AndroidManifest.xml
+++ b/Gallery/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="com.example.gallery"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
